# rust

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  TODO.md  fetch-and-merge.sh  fmt.sh  modify-files-permissions.sh  release.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: continuous-verification.yaml  release-test-codecov.yaml
src/: global_allocator.rs  lib.rs  main.rs  re_exports.rs  signal.rs  signal_handler.rs  task_manager.rs  tracing.rs
src/atomic/: enum.rs  enum_cell.rs  mod.rs
src/extensions/: anyhow.rs  mod.rs
src/logger/: config.rs  file.rs  mod.rs  options.rs  target.rs  worker.rs
src/service/: async_lifecycle.rs  mod.rs  state.rs
src/task/: internals.rs  managed.rs  manager.rs  mod.rs
src/types/: fx_collections.rs  mod.rs
tests/: mod.rs
tests/logger/: mod.rs
tests/service/: async_lifecycle.rs  mod.rs
tests/task/: manager.rs
