[package]
name = "kikiutils"
version = "0.9.0"

authors = ["kiki-kanri"]
categories = ["development-tools"]
description = "A utility library to simplify Rust development."
edition = "2021"
homepage = "https://github.com/kikiutils/rust"
include = [
  "Cargo.toml",
  "README.md",
  "src/**/*",
]

keywords = ["utils"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kikiutils/rust"

# Lint rules
[lints.clippy]
all = { level = "warn", priority = -1 }
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
cargo = { level = "warn", priority = -1 }
cast_ptr_alignment = "warn"
dbg_macro = "deny"
expect_used = "deny"
fn_to_numeric_cast_any = "deny"
items_after_statements = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
multiple_crate_versions = "allow"
mutex_atomic = "warn"
needless_for_each = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_mutex = "warn"
todo = "warn"
transmute_ptr_to_ptr = "deny"
trivially_copy_pass_by_ref = "warn"
undocumented_unsafe_blocks = "deny"
unnecessary_mut_passed = "deny"
unnecessary_sort_by = "deny"
unreadable_literal = "warn"
unused_async = "deny"
unused_self = "warn"
unwrap_used = "deny"

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "allow"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[lints.rustdoc]
broken_intra_doc_links = "allow"
missing_crate_level_docs = "allow"
private_intra_doc_links = "allow"

# Dependencies
[dependencies]
anyhow = { version = "1.0.102", optional = true }
dashmap = { version = "6.2.1", optional = true }
pathkit = { version = "1.4.1", optional = true }
rustc-hash = { version = "2.1.2", optional = true }
time = { version = "0.3.49", features = ["formatting", "local-offset", "macros"], optional = true }
tokio = { version = "1.52.3", features = ["macros", "rt", "signal", "sync"], optional = true }
tokio-util = { version = "0.7.18", optional = true }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.23", features = ["time"], optional = true }

[target.'cfg(windows)'.dependencies]
mimalloc = { version = "0.1.52", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = { version = "0.7.0", features = ["background_threads_runtime_support", "background_threads"], optional = true }

[dev-dependencies]
rand = "0.10.1"
tokio = { version = "1.52.3", features = ["full"] }

# Features
[features]
## Define features
atomic-enum-cell = ["dep:anyhow"]
fx-collections = [
  "dep:dashmap",
  "dep:rustc-hash",
]

global-allocator = [
  "dep:mimalloc",
  "dep:tikv-jemallocator",
]

logger = [
  "dep:anyhow",
  "dep:pathkit",
  "dep:time",
  "dep:tracing",
  "dep:tracing-subscriber",
]

signal = [
  "dep:anyhow",
  "dep:tokio",
]

task = [
  "dep:anyhow",
  "dep:tokio",
  "dep:tokio-util",
  "fx-collections",
]

## Default and alias
default = []
all = [
  "atomic-enum-cell",
  "fx-collections",
  "logger",
  "signal",
  "task",
]

full = ["all"]

# Profiles
[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = true
panic = "abort"
strip = "symbols"
