[package]
name = "kikiutils"
version = "0.11.2"
edition = "2024"

description = "A utility library to simplify Rust development."
# documentation = "https://docs.rs/crate-name"
# homepage = ""
license = "MIT"
readme = "./README.md"
repository = "https://github.com/kikiutils/rust"

categories = ["development-tools"]
keywords = ["utils"]

include = [
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**",
  "examples/**",
  "src/**",
  "tests/**",
]

# Prevent accidental publishing for private/internal crates.
# publish = false

# Only needed when using native linking / sys crates.
# links = "native-library-name"

# Cargo auto-detects build.rs by default.
# Use `build = false` to disable auto-detection, or a custom path if needed.
# build = "build.rs"

# Optional cargo/tool metadata.
# [package.metadata]


# =============================================================================
# Lints
# =============================================================================

[lints.clippy]
all = { level = "warn", priority = -1 }
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
cargo = { level = "warn", priority = -1 }
cast_ptr_alignment = "warn"
dbg_macro = "deny"
expect_used = "deny"
fn_to_numeric_cast_any = "deny"
items_after_statements = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
mutex_atomic = "warn"
needless_for_each = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_mutex = "warn"
todo = "warn"
transmute_ptr_to_ptr = "deny"
trivially_copy_pass_by_ref = "warn"
undocumented_unsafe_blocks = "deny"
unnecessary_mut_passed = "deny"
unnecessary_sort_by = "deny"
unreadable_literal = "warn"
unused_async = "deny"
unused_self = "warn"
unwrap_used = "deny"

# Usually too noisy for many crates; enable when you want stricter docs.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"

# Commonly triggered by dependency trees; usually not actionable per crate.
multiple_crate_versions = "allow"

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "allow"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[lints.rustdoc]
broken_intra_doc_links = "warn"
missing_crate_level_docs = "allow"
private_intra_doc_links = "warn"

# =============================================================================
# Features
# =============================================================================

[features]
default = []

# Convenience aliases.
all = [
  "atomic-enum-cell",
  "fx-collections",
  "global-allocator",
  "logger",
  "async-service",
  "signal",
  "task",
]

full = ["all"]

# Example:
# serde = ["dep:serde"]
# cli = ["dep:clap"]
# async = ["dep:tokio"]

# Define features here.
async-service = [
  "atomic-enum-cell",
  "dep:anyhow",
  "dep:tokio",
  "task",
]

atomic-enum-cell = ["dep:anyhow"]
fx-collections = [
  "dep:dashmap",
  "dep:rustc-hash",
]

global-allocator = [
  "dep:mimalloc",
  "dep:tikv-jemallocator",
]

logger = [
  "dep:anyhow",
  "dep:pathkit",
  "dep:time",
  "dep:tracing",
  "dep:tracing-subscriber",
]

signal = [
  "dep:anyhow",
  "dep:tokio",
]

task = [
  "dep:anyhow",
  "dep:tokio",
  "dep:tokio-util",
  "fx-collections",
]

# =============================================================================
# Dependencies
# =============================================================================

[dependencies]
anyhow = { version = "1.0.102", optional = true }
dashmap = { version = "6.2.1", optional = true }
num_enum = "0.7.6"
pathkit = { version = "1.4.1", optional = true }
rustc-hash = { version = "2.1.2", optional = true }
time = { version = "0.3.49", features = ["formatting", "local-offset", "macros"], optional = true }
tokio = { version = "1.52.3", features = ["macros", "rt", "signal", "sync"], optional = true }
tokio-util = { version = "0.7.18", optional = true }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.23", features = ["time"], optional = true }

# -----------------------------------------------------------------------------
# OS / family-specific dependencies
# -----------------------------------------------------------------------------

# Applies to Linux, macOS, BSD, Android, iOS, etc.
[target.'cfg(unix)'.dependencies]


[target.'cfg(windows)'.dependencies]
mimalloc = { version = "0.1.52", optional = true }

# Linux-only deps.
[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = { version = "0.7.0", features = ["background_threads_runtime_support", "background_threads"], optional = true }

# macOS-only deps.
[target.'cfg(target_os = "macos")'.dependencies]


# Windows-only deps. Usually same as cfg(windows), but kept explicit for template clarity.
[target.'cfg(target_os = "windows")'.dependencies]


[target.'cfg(target_family = "wasm")'.dependencies]


[target.'cfg(target_arch = "wasm32")'.dependencies]

# -----------------------------------------------------------------------------
# Target cfg / ABI-specific dependencies
# -----------------------------------------------------------------------------

# Linux GNU / glibc only.
[target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dependencies]


# Linux musl only.
[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]


# Windows MSVC only.
[target.'cfg(all(target_os = "windows", target_env = "msvc"))'.dependencies]


# Windows GNU only.
[target.'cfg(all(target_os = "windows", target_env = "gnu"))'.dependencies]


# macOS Intel only.
[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]


# macOS Apple Silicon only.
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]


# Custom sections for exact target triples or custom target cfgs.
# Examples:
# [target.'aarch64-unknown-linux-musl'.dependencies]
# [target.'aarch64-apple-ios'.dependencies]
# [target.'aarch64-linux-android'.dependencies]
# [target.'wasm32-unknown-unknown'.dependencies]
# [target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
# [target.'cfg(all(target_vendor = "apple", target_arch = "aarch64"))'.dependencies]

# =============================================================================
# Build dependencies
# =============================================================================

# Build-script-only dependencies.
[build-dependencies]


# -----------------------------------------------------------------------------
# Target-specific build dependencies
# -----------------------------------------------------------------------------

# Unix build-script deps.
[target.'cfg(unix)'.build-dependencies]


# Windows build-script deps.
[target.'cfg(windows)'.build-dependencies]


# Linux build-script deps.
[target.'cfg(target_os = "linux")'.build-dependencies]


# macOS build-script deps.
[target.'cfg(target_os = "macos")'.build-dependencies]


# Windows build-script deps.
[target.'cfg(target_os = "windows")'.build-dependencies]


# WASM build-script deps.
[target.'cfg(target_family = "wasm")'.build-dependencies]


# wasm32 build-script deps.
[target.'cfg(target_arch = "wasm32")'.build-dependencies]


# Custom sections for exact target triples or custom target cfgs.
# Examples:
# [target.'aarch64-unknown-linux-musl'.build-dependencies]
# [target.'aarch64-apple-ios'.build-dependencies]
# [target.'aarch64-linux-android'.build-dependencies]
# [target.'wasm32-unknown-unknown'.build-dependencies]
# [target.'cfg(all(target_os = "linux", target_env = "musl"))'.build-dependencies]
# [target.'cfg(all(target_vendor = "apple", target_arch = "aarch64"))'.build-dependencies]

# =============================================================================
# Development dependencies
# =============================================================================

# Test/example/bench-only dependencies.
[dev-dependencies]
rand = "0.10.1"
tokio = { version = "1.52.3", features = ["full"] }

# -----------------------------------------------------------------------------
# Target-specific development dependencies
# -----------------------------------------------------------------------------

# Unix-only test deps.
[target.'cfg(unix)'.dev-dependencies]


# Windows-only test deps.
[target.'cfg(windows)'.dev-dependencies]


# Linux-only test deps.
[target.'cfg(target_os = "linux")'.dev-dependencies]


# macOS-only test deps.
[target.'cfg(target_os = "macos")'.dev-dependencies]


# Windows-only test deps.
[target.'cfg(target_os = "windows")'.dev-dependencies]


# WASM-only test deps.
[target.'cfg(target_family = "wasm")'.dev-dependencies]


# wasm32-only test deps.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]


# Custom sections for exact target triples or custom target cfgs.
# Examples:
# [target.'aarch64-unknown-linux-musl'.dev-dependencies]
# [target.'aarch64-apple-ios'.dev-dependencies]
# [target.'aarch64-linux-android'.dev-dependencies]
# [target.'wasm32-unknown-unknown'.dev-dependencies]
# [target.'cfg(all(target_os = "linux", target_env = "musl"))'.dev-dependencies]
# [target.'cfg(all(target_vendor = "apple", target_arch = "aarch64"))'.dev-dependencies]

# =============================================================================
# Library / binary / examples / tests / benches
# =============================================================================

# Usually not needed if using the default `src/lib.rs`.
# [lib]
# name = "crate_name"
# path = "src/lib.rs"
# crate-type = ["lib"]
# doctest = true

# Usually not needed if using the default `src/main.rs`.
# [[bin]]
# name = "crate-name"
# path = "src/main.rs"
# required-features = []

# [[example]]
# name = "example-name"
# path = "examples/example-name.rs"
# required-features = []

# Usually auto-discovered from `tests/*.rs`.
# [[test]]
# name = "integration"
# path = "tests/integration.rs"
# required-features = []

# [[bench]]
# name = "benchmark-name"
# path = "benches/benchmark-name.rs"
# harness = false
# required-features = []

# =============================================================================
# Profiles
# =============================================================================
# Profiles are effective here because this is the package root.
# For workspaces, define profiles only at the workspace root.

# [profile.dev]
# opt-level = 0
# debug = true
# incremental = true
# overflow-checks = true

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = true
panic = "abort"
strip = "symbols"

# Faster release build, slightly less optimized than full LTO.
# [profile.release-fast]
# inherits = "release"
# lto = "thin"
# codegen-units = 16

# Smaller binary profile.
# [profile.release-small]
# inherits = "release"
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
# strip = "symbols"

# [profile.test]
# opt-level = 0
# debug = true

# [profile.bench]
# inherits = "release"
# debug = true

# =============================================================================
# Dependency overrides
# =============================================================================
# For workspaces, prefer defining patches at the workspace root.

# [patch.crates-io]
# crate-name = { git = "https://github.com/owner/crate-name", branch = "main" }
